footer no longer covers content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,9 @@
     background-color: 	#F3FFFF;
     // background-image: image-url("https://i2.wp.com/wptavern.com/wp-content/uploads/2015/02/library.png?fit=1024%2C499&ssl=1");
     text-align: center;
+    min-height: 400px;
+   margin-bottom: 100px;
+   clear: both;
 
 }
 form {
